--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ serde_json = "1.0.56"
 reqwest = {version = "0.11.0", features = ["json"]}
 # Error handling crate
 anyhow = "1.0.39"
+# for big int support
+num-bigint = {version = "0.4", features = ["serde"]}
